Add cart functionality to client and runner dashboards, including cart item count display. Update navigation to include cart links and integrate cart API for real-time item tracking.

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -61,9 +61,12 @@ PAYGATE_URL=https://secure.paygate.co.za/payweb3/process.trans
 LOG_LEVEL=warn
 
 # ============================================
-# Admin Configuration
+# Admin Configuration (used by seed-admin script)
 # ============================================
+# Set these when running npm run seed-admin; never commit real values
 ADMIN_EMAIL=admin@morongwa.com
+ADMIN_PASSWORD=
+ADMIN_NAME=Admin
 
 # ============================================
 # CORS & Security
